Add individual receivable endpoint, docs
